--- a/src/pages/HomePage/Containers/Sidebar.css
+++ b/src/pages/HomePage/Containers/Sidebar.css
@@ -1,6 +1,6 @@
 /* Sidebar.css */
 .sidebar {
-    width: 250px;
+    min-width: 250px;
     min-height: 100vh;
     background: #ffffff;
     overflow-y: auto;
