--- a/src/pages/HomePage/SubContent/Position.css
+++ b/src/pages/HomePage/SubContent/Position.css
@@ -1,22 +1,22 @@
 .position {
     height: 64px;
-    /* background: #8a70e8; */
-    margin: 36px 48px 24px 48px; /* 上右下左，顺时针 */
-    padding: 16px;
+    background: #153d77;
+    margin: 36px 54px 24px 54px; /* 上右下左，顺时针 */
+    padding: 12px;
     z-index: 1;
 }
 
 .title {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     color: #ffffff;
     margin: 0 0 4px 0;
     padding: 0;
 }
 
-.file-path {
+.web-page-path {
     font-size: 16px;
-    color: #ffffff;
+    color: #f4f4f4;
     margin: 0;
     padding: 0;
 }
