--- a/src/pages/HomePage/Containers/Sidebar.css
+++ b/src/pages/HomePage/Containers/Sidebar.css
@@ -1,24 +1,24 @@
-/* Sidebar.css */
 .sidebar {
     min-width: 250px;
-    min-height: 100vh;
+    min-height: 100%;
     background: #ffffff;
-    overflow-y: auto;
     position: relative;
-    word-wrap: break-word; /* 文字自动换行 */
     box-shadow: 2px 2px 15px 5px rgba(21, 61, 119, 0.07);/*水平偏移量 垂直偏移量 模糊半径 扩散半径 颜色*/
+
+    /*下面两条不删，注释掉之后仍然留着*/
+    /*overflow-y: auto;*/
+    /*word-wrap: break-word; !* 文字自动换行 *!*/
 }
 
-.brand {
+.logo {
     height: 64px;
     background: #153d77;
     display: flex;
     align-items: center; /* 垂直居中 */
-    /*justify-content: center; !* 水平居中 *!*/
     gap: 10px; /* 控制标题和图标之间的间距 */
 }
 
-.brand h3 {
+.logo h3 {
     color: white; /* 设置字体颜色为白色 */
     font-weight: normal; /* 调整字体粗细 */
     margin-left: 8px;
@@ -32,38 +32,34 @@
 
 .user {
     height: 157px;
-}
-
-/*头像部分*/
-.avatar{
     display: flex;
     flex-direction: column; /* 在设置flex的基础上设置column，会让该区域子项的横竖反转，如原来的垂直居中样式变成水平居中 */
     align-items: center; /* 原来是垂直居中，现被调整为水平居中 */
     padding-top: 30px;
 }
-.avatar-img{
+.user-avatar{
     width: 72px;    /* 头像长度 */
     border-radius: 36px;
 }
-.avatar-name{
+.user-name{
     font-weight: 600;
 }
-.avatar-email{
+.user-email{
     font-size: 14px;
     color: #626262;
 }
 
 /*导航列表部分*/
-.sub-navbar{
+.menu{
     margin-top: 40px;
     width: 220px;   /* 二级列表外围容器长度 */
 }
-.sub-navbar-theme{
+.menu-theme{
     padding: 8px;
     margin: 5px;
     color: #9b9b9b;
 }
-.sub-navbar-link {
+.menu-link {
     text-decoration: none;  /* 去除a标签中文字的下划线 */
     display: flex;
     color: #282c34;     /* a标签内字体颜色 */
@@ -72,23 +68,21 @@
     margin: 5px;
     cursor: pointer; /* 添加手型指针 */
 }
-
-.sub-navbar-link:hover,
-.sub-navbar-link.active {
+.menu-link:hover,
+.menu-link.active {
     background-color: #dadada;  /*背景颜色*/
 }
 
-.sub-navbar-icon {
+.menu-icon {
     vertical-align: middle;    /* 使Logo图标居中 */
     margin-right: 13px;  /*文字与二级菜单Logo的间距*/
     width: 20px;
 }
-
-.sub-navbar-title {
+.menu-title {
     flex-grow: 1; /* 占据剩余空间 */
     vertical-align: middle;
 }
-.toggle-icon {
+.menu-toggle-icon {
     vertical-align: middle;
     width: 20px; /* 根据需要设置尺寸 */
     margin-left: 10px;
@@ -97,17 +91,10 @@
 .sub-menu {
     margin-left: 20px;
     margin-top: 5px;
-
     max-height: 0;      /*动画效果*/
     overflow: hidden;
-    /*transition: max-height 0.3s ease-out;*/
 }
-
-.sub-menu.open {
-    overflow: hidden;
-}
-
-.sub-navbar-sublink {
+.menu-sublink {
     text-decoration: none;
     display: block;
     color: #707070;
@@ -118,12 +105,12 @@
     font-size: 15px;
 }
 
-.sub-navbar-sublink:hover,
-.sub-navbar-sublink.active {
+.menu-sublink:hover,
+.menu-sublink.active {
     font-weight: 640;
     color: #282c34;
 }
 
-.sub-navbar-subtitle {
+.menu-subtitle {
     margin-left: 20px;  /* 控制二级菜单标题的缩进 */
 }
