--- a/src/pages/HomePage/MainPage/Blog/Reading.css
+++ b/src/pages/HomePage/MainPage/Blog/Reading.css
@@ -12,7 +12,10 @@
     margin-right: 24px;
     font-size: 18px;
     line-height: 2.2;
+    text-align: justify;/*自动调整间距填充整行*/
+    border-radius: 4px;
 }
+
 .article-info {
     display: flex;
     justify-content: space-between;
@@ -26,33 +29,66 @@
     margin: 24px 0;
 }
 
+.article-footer {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    margin-bottom: 8px;
+    padding: 10px;
+    border-top: 1px solid #b6b6b6;
+}
+
+.article-action {
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+}
+.article-footer-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #282c34;
+    border-radius: 4px;
+    padding: 0 6px;
+    cursor: pointer;
+}
+.article-footer-link:hover {
+    background-color: #ececec;
+}
+.article-footer-icon {
+    padding-right: 4px;
+    width: 20px;
+}
+
+.article-footer-title {
+    padding-right: 8px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+}
+
 .toc {
-    /*flex-grow: 2;*/
     min-width: 200px;
     background: #ffffff;
     padding: 20px;
     box-shadow: 2px 2px 15px 5px rgba(21, 61, 119, 0.07);
     font-size: 16px;
+    border-radius: 4px;
 }
-
 .toc h2 {
     margin-top: 0;
 }
-
 .toc ul {
     list-style-type: none;
     padding-left: 0;
 }
-
 .toc ul li {
     margin-bottom: 10px;
 }
-
 .toc ul li a {
     text-decoration: none;
     color: #333;
 }
-
 .toc ul li a:hover {
     text-decoration: underline;
 }
